# sharutils

sharutils/: .cvsignore  AUTHORS  BACKLOG  ChangeLog.OLD  Makefile.am  NEWS  README  README-alpha  THANKS  TODO  config.guess  config.sub  configure  mkinstalldirs
sharutils/doc/: ChangeLog  Makefile.am  doclicense.texi  sharutils.info  sharutils.info-1  sharutils.info-2  stamp-vti  unshar.1  uuencode.1
sharutils/intl/: ChangeLog
sharutils/lib/: Makefile.am  basename.h
sharutils/m4/: Makefile.in  sharutils.m4
sharutils/po/: ChangeLog  Makefile.in  POTFILES  ca.po  da.po  de.po  es.po  et.po  fr.po  hu.po  ja.po  nl.po  pt.po  ru.po  sv.po  tr.po
sharutils/sharutils-4.3.76/: ChangeLog  ChangeLog.OLD  Makefile.in  NEWS  README-alpha  THANKS  TODO  aclocal.m4  config.h.in  configure.ac  mkinstalldirs
sharutils/sharutils-4.3.76/=build/: Makefile  config.h  config.status
sharutils/sharutils-4.3.76/=build/contrib/: Makefile
sharutils/sharutils-4.3.76/=build/doc/: Makefile  sharutils.aux  sharutils.dvi  sharutils.pg  sharutils.pgs  sharutils.toc
sharutils/sharutils-4.3.76/=build/intl/: Makefile  charset.alias
sharutils/sharutils-4.3.76/=build/lib/: Makefile  unlocked-io.h
sharutils/sharutils-4.3.76/=build/lib/.deps/: basename.Po  error.Po  getopt.Po  getopt1.Po  md5.Po  offtostr.Po  whoami.Po  xgetcwd.Po  xmalloc.Po  xstrdup.Po
sharutils/sharutils-4.3.76/=build/m4/: Makefile
sharutils/sharutils-4.3.76/=build/po/: Makefile  Makefile.in  POTFILES
sharutils/sharutils-4.3.76/=build/src/: Makefile  compress-dummy  mail-files  mailshar  remsync  shar  unshar  uudecode  uuencode
sharutils/sharutils-4.3.76/=build/src/.deps/: encode.Po  shar.Po  unshar.Po  uudecode.Po  uuencode.Po
sharutils/sharutils-4.3.76/=build/tests/: Makefile
sharutils/sharutils-4.3.76/contrib/: ChangeLog  Makefile.am  Makefile.in
sharutils/sharutils-4.3.76/doc/: Makefile.in  shar.1  sharutils.texi  uuencode.5
sharutils/sharutils-4.3.76/intl/: VERSION
sharutils/sharutils-4.3.76/lib/: ChangeLog  Makefile.in  error.c  system.h
sharutils/sharutils-4.3.76/m4/: ChangeLog  Makefile.am
sharutils/sharutils-4.3.76/po/: ChangeLog  LINGUAS  ca.gmo  cs.gmo  cs.po  da.gmo  de.gmo  de.po  el.gmo  el.po  es.gmo  fr.gmo  gl.gmo  gl.po  hu.gmo  ja.gmo  nb.gmo  nb.po  nl.gmo  nn.gmo  nn.po  pt.gmo  ru.gmo  sv.gmo  sv.po  tr.gmo  tr.po  zh_TW.gmo  zh_TW.po
sharutils/sharutils-4.3.76/src/: ChangeLog  Makefile.in  compress-dummy.in  mailshar.in  remsync.in  shar.c  unshar.c  uudecode.c  uuencode.c
sharutils/sharutils-4.3.76/tests/: Makefile.in  shar-1  shar-1.ok
sharutils/src/: .cvsignore  ChangeLog  Makefile.am  shar.c
sharutils/tests/: .cvsignore  ChangeLog  Makefile.am
